[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Graphics/hand/Hand.png" type="Texture" id=1]
[ext_resource path="res://Scenes/handEndChapter.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
absorbent = true

[node name="hand" type="RigidBody2D" groups=["exitChapter"]]
mode = 3
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="handtween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 239, -85, 750.537, -77.3777, 781, -57, 888, -58, 895, 2, 895, 33, 886, 46, 849, 48, 725, 48, 278, 100, -151, 240, -340, 283, -513, 361, -806, 563, -901, 630, -1020, 756, -1020, 310, -928, 223, -179, -193, -143, -144, 58, -252, 247, -220 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 239, -85, 874, -84, 895, 2, 895, 33, 886, 46, 849, 48, 725, 48, 278, 100, -151, 240, -340, 283, -513, 361, -806, 563, -901, 630, -1020, 756, -1020, 310, -928, 223, -179, -193, -143, -144, 58, -252, 247, -220 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="handtween" to="." method="_on_handtween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
